@@ -22,6 +22,8 @@ linux (4.6-1~exp2) UNRELEASED; urgency=medium
   * [mips*/*-malta] udeb: Add ata-modules package
   * linux-image: Stop setting $STEM in environment for maintainer script hooks
   * linux-image: Add workaround for bug #817083 in debconf
+  * linux-image: prerm: Allow removal of running kernel if we can't ask debconf
+    questions (Closes: #825423)
 
   [ Aurelien Jarno ]
   * [mips64{,el}] Set CPU to MIPS64 R2.
